--- a/Dockerfile.mano
+++ b/Dockerfile.mano
@@ -1,5 +1,5 @@
 FROM openjdk:8-alpine
 MAINTAINER openslice.io
-COPY target/io.openslice.mano-0.0.1-SNAPSHOT.jar /opt/openslice/lib/
+COPY target/io.openslice.manoclient-0.0.1-SNAPSHOT.jar /opt/openslice/lib/
 ENTRYPOINT ["/usr/bin/java"]
-CMD ["-jar", "/opt/openslice/lib/io.openslice.mano-0.0.1-SNAPSHOT.jar"]
+CMD ["-jar", "/opt/openslice/lib/io.openslice.manoclient-0.0.1-SNAPSHOT.jar"]
