--- a/.classpath
+++ b/.classpath
@@ -36,23 +36,7 @@
 	</classpathentry>
 	<classpathentry kind="src" path="/io.openslice.sol005nbi.osm5"/>
 	<classpathentry kind="src" path="/io.openslice.portal.api"/>
-	<classpathentry kind="lib" path="C:/Users/Ioannis/.m2/repository/com/fasterxml/jackson/datatype/jackson-datatype-hibernate5/2.9.9/jackson-datatype-hibernate5-2.9.9.jar" sourcepath="C:/Users/Ioannis/.m2/repository/com/fasterxml/jackson/datatype/jackson-datatype-hibernate5/2.9.9/jackson-datatype-hibernate5-2.9.9-sources.jar">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="maven.groupId" value="com.fasterxml.jackson.datatype"/>
-			<attribute name="maven.artifactId" value="jackson-datatype-hibernate5"/>
-			<attribute name="maven.version" value="2.9.9"/>
-			<attribute name="maven.scope" value="compile"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Ioannis/.m2/repository/org/apache/camel/camel-api/3.0.0-RC3/camel-api-3.0.0-RC3.jar" sourcepath="C:/Users/Ioannis/.m2/repository/org/apache/camel/camel-api/3.0.0-RC3/camel-api-3.0.0-RC3-sources.jar">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="maven.groupId" value="org.apache.camel"/>
-			<attribute name="maven.artifactId" value="camel-api"/>
-			<attribute name="maven.version" value="3.0.0-RC3"/>
-			<attribute name="maven.scope" value="compile"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="src" path="/io.openslice.model"/>
+	<classpathentry kind="src" path="/io.openslice.centrallog.client"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
