--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,11 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>io.openslice</groupId>			
+			<artifactId>io.openslice.centrallog.client</artifactId>
+			<version>${project.version}</version>
+		</dependency>		
+		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
