--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 			</dependency>
 			<!-- Camel BOM -->
 			<dependency>
-				<groupId>org.apache.camel</groupId>
+				<groupId>org.apache.camel.springboot</groupId>
 				<artifactId>camel-spring-boot-dependencies</artifactId>
 				<version>${camel.version}</version>
 				<type>pom</type>
@@ -64,7 +64,7 @@
 			<artifactId>spring-boot-starter-cache</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.camel</groupId>
+			<groupId>org.apache.camel.springboot</groupId>
 			<artifactId>camel-undertow-starter</artifactId>
 		</dependency>
 		<dependency>
@@ -109,7 +109,7 @@
 
 		<!-- Camel -->
 		<dependency>
-			<groupId>org.apache.camel</groupId>
+			<groupId>org.apache.camel.springboot</groupId>
 			<artifactId>camel-spring-boot-starter</artifactId>
 		</dependency>
 		<dependency>
@@ -127,7 +127,7 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.camel</groupId>
+			<groupId>org.apache.camel.springboot</groupId>
 			<artifactId>camel-service-starter</artifactId>
 		</dependency>
 		<dependency>
@@ -144,7 +144,7 @@
 			<artifactId>camel-stream</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.camel</groupId>
+			<groupId>org.apache.camel.springboot</groupId>
 			<artifactId>camel-zipkin-starter</artifactId>
 		</dependency>
 		<dependency>
