Changes for common OSM interface

--- a/.classpath
+++ b/.classpath
@@ -32,5 +32,11 @@
 	<classpathentry kind="src" path="/io.openslice.portal.api"/>
 	<classpathentry kind="src" path="/io.openslice.model"/>
 	<classpathentry kind="src" path="/io.openslice.centrallog.client"/>
+	<classpathentry excluding="**" kind="src" output="target/test-classes" path="src/test/resources">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="test" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
