--- a/Dockerfile.mano
+++ b/Dockerfile.mano
@@ -2,5 +2,5 @@ FROM adoptopenjdk/openjdk13-openj9:latest
 MAINTAINER openslice.io
 RUN mkdir /opt/shareclasses
 RUN mkdir -p /opt/openslice/lib/
-COPY target/io.openslice.manoclient-0.0.1-SNAPSHOT.jar /opt/openslice/lib/
-CMD ["java", "-Xshareclasses:cacheDir=/opt/shareclasses","-jar", "/opt/openslice/lib/io.openslice.manoclient-0.0.1-SNAPSHOT.jar"]
+COPY target/io.openslice.manoclient-1.0.1.jar /opt/openslice/lib/
+CMD ["java", "-Xshareclasses:cacheDir=/opt/shareclasses","-jar", "/opt/openslice/lib/io.openslice.manoclient-1.0.1.jar"]
