--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,11 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>io.openslice.sol005nbi</groupId>
+			<artifactId>io.openslice.sol005nbi.etsi</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-hibernate5</artifactId>
 		</dependency>
