--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,11 @@
 		</dependency>
 		<dependency>
 			<groupId>io.openslice.sol005nbi</groupId>
+			<artifactId>io.openslice.sol005nbi.osm</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.openslice.sol005nbi</groupId>
 			<artifactId>io.openslice.sol005nbi.osm7</artifactId>
 			<version>${project.version}</version>
 		</dependency>
