fixes for alarm generation on scale

--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,17 @@
 			<groupId>org.apache.camel.springboot</groupId>
 			<artifactId>camel-zipkin-starter</artifactId>
 		</dependency>
+		
+		
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.openslice</groupId>
+			<artifactId>io.openslice.tmf.api</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>io.openslice</groupId>
 			<artifactId>io.openslice.model</artifactId>
