--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -66,7 +66,16 @@ portaltitle: "openslice"
 maindomain: "http://localhost:13000"
 main_operations_product: "Openslice Operations"
 
-
+keycloak:
+  realm: openslice
+  auth-server-url: http://localhost/auth
+  ssl-required: none
+  resource: admin-cli
+  credentials:
+    secret: none
+  public-client: false
+  bearer-only: true
+  principal-attribute: preferred_username
 
 #ALARMS
 ALARMS_ADD_ALARM: "jms:queue:ALARMS.ADD.ALARM"
