--- a/pom.xml
+++ b/pom.xml
@@ -146,9 +146,7 @@
 		<dependency>
 			<groupId>org.apache.camel.springboot</groupId>
 			<artifactId>camel-zipkin-starter</artifactId>
-		</dependency>
-		
-		
+		</dependency>				
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
@@ -205,15 +203,38 @@
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-jsr310</artifactId>
 		</dependency>
-		<!-- Runtime, com.sun.xml.bind module -->
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>yang-common</artifactId>
+		    <version>6.0.5</version>
+        </dependency>
+		<dependency>
+		    <groupId>com.google.code.findbugs</groupId>
+		    <artifactId>jsr305</artifactId>
+		    <version>3.0.2</version>
+		</dependency>	
+		<!-- https://mvnrepository.com/artifact/org.opendaylight.mdsal/yang-binding -->
 		<dependency>
 		    <groupId>org.glassfish.jaxb</groupId>
 		    <artifactId>jaxb-runtime</artifactId>
-		    <version>2.3.2</version>
+	    </dependency>				
+		<dependency>
+		    <groupId>org.opendaylight.mdsal</groupId>
+		    <artifactId>yang-binding</artifactId>
+		    <version>7.0.6</version>
+		</dependency>	    
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>29.0-jre</version>
+		</dependency>		
+		<!-- Runtime, com.sun.xml.bind module -->
+		<dependency>
+		    <groupId>org.opendaylight.yangtools</groupId>
+		    <artifactId>yang-binding</artifactId>
+		    <version>0.7.4-Lithium-SR4</version>
 		</dependency>
-				
 	</dependencies>
-
 	<build>
 		<pluginManagement>
 			<plugins>
