--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,7 +39,7 @@ spring:
   cloud:
     consul:
       enabled: true
-      host: http://localhost:8500
+      host: http://localhost
       port: 8500
       config:
         enabled: true
