added packages:trust-all: true

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -61,6 +61,8 @@ spring:
     pool:
       enabled: true
       max-connections: 100
+    packages:
+      trust-all: true
       
 portaltitle: "openslice"
 maindomain: "http://localhost:13000"
