--- a/pom.xml
+++ b/pom.xml
@@ -191,6 +191,11 @@
 		</dependency>
 		<dependency>
 			<groupId>io.openslice.sol005nbi</groupId>
+			<artifactId>io.openslice.sol005nbi.osm10</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.openslice.sol005nbi</groupId>
 			<artifactId>io.openslice.sol005nbi.etsi</artifactId>
 			<version>${project.version}</version>
 		</dependency>
