6: NLCM and NSR when changed must update Running ResourceFacingServiceSpecification service in inventory
Task-Url: https://github.com/openslice/io.openslice.mano/issues/6

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -87,5 +87,6 @@ ALARMS_GET_ALARM: "jms:queue:ALARMS.GET.ALARM"
 
 #NS ACTIONS
 NFV_CATALOG_NSACTIONS_SCALE: "jms:queue:NSACTIONS.SCALE"
+NFV_CATALOG_NS_LCMCHANGED: "jms:topic:NFV_CATALOG_NS_LCMCHANGED"
 
 
