fix activemq connection

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,9 +22,9 @@ spring:
   application:
     name: mano-client-service
   activemq:
-    brokerUrl: tcp://localhost:61616
-    user: admin
-    password: admin
+    brokerUrl: tcp://localhost:61616?jms.watchTopicAdvisories=false
+    user: artemis
+    password: artemis
     pool:
       enabled: true
       max-connections: 100
